data/derived/sp14/progs/unify/prog4418.ml.out
Characters 105-121:
  ((i+j+s)/10, t@((i+j+s) mod 10)) in
                 ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
